2009-02-10  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=23868
        Add HTMLInputElement and HTMLOptionsCollection V8 custom bindings.

        * bindings/v8/custom/V8HTMLInputElementCustom.cpp: Added.
        (WebCore::ACCESSOR_GETTER):
        (WebCore::ACCESSOR_SETTER):
        (WebCore::CALLBACK_FUNC_DECL):
        * bindings/v8/custom/V8HTMLOptionsCollectionCustom.cpp: Added.
        (WebCore::ACCESSOR_GETTER):
        (WebCore::ACCESSOR_SETTER):

2009-02-10  Adam Roben  <aroben@apple.com>

        Fix Bug 23871: Assertion failure beneath WebCore::openFunc when
        running http/tests/security/xss-DENIED-xsl-document-redirect.xml

        <https://bugs.webkit.org/show_bug.cgi?id=23871>

        Reviewed by Alexey Proskuryakov.

        Covered by existing tests.

        * dom/XMLTokenizerLibxml2.cpp:
        (WebCore::openFunc): Use the two-parameter KURL constructor so that
        the string will be parsed. libxml2 gives us a UTF-8-encoded string
        that needs to be parsed.

2009-02-10  David Hyatt  <hyatt@apple.com>

        Shrink the size of all replaced elements (images, form controls, plugins) by 4 bytes by packing the
        overflow boolean into the RenderObject base class.

        Reviewed by Sam Weinig

        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::RenderObject):
        * rendering/RenderObject.h:
        (WebCore::RenderObject::replacedHasOverflow):
        (WebCore::RenderObject::setReplacedHasOverflow):
        * rendering/RenderReplaced.cpp:
        (WebCore::RenderReplaced::RenderReplaced):
        (WebCore::RenderReplaced::~RenderReplaced):
        (WebCore::RenderReplaced::adjustOverflowForBoxShadow):
        (WebCore::RenderReplaced::overflowHeight):
        (WebCore::RenderReplaced::overflowWidth):
        (WebCore::RenderReplaced::overflowLeft):
        (WebCore::RenderReplaced::overflowTop):